tests/paczka1/fuzzy1/63086743.err
Error in line 6: UQhrsF9OJrp S610 52,2
Error in line 5: FRz A662 29,9
Error in line 31: UQhrsF9OJrp S223 66,7
